--- a/css/styles.css
+++ b/css/styles.css
@@ -1,49 +1,52 @@
-
-@font-face{
-  font-family: "pokefont";
-  src: url(../pokefont.ttf);
+@font-face {
+	font-family: "pokefont";
+	src: url(pokefont.ttf);
 }
 
-input[type=submit]{
+input[type=submit] {
 	font-family: "pokefont";
 	font-size: 20px;
 }
 
-
-.loginresult{
-	font-family: "pokefont";
-	font-size: 20px;
- color: red;
-}
-button{
+button {
 	font-family: "pokefont";
 	display:inline-block;
 }
 
 .top-screen-lights {
-  width: 50%;
-  margin-top: 2px;
-  display: flex;
-  justify-self: center;
-  justify-content: center;
-  align-items: center;
+	width: 50%;
+	margin-top: 2px;
+	display: flex;
+	justify-self: center;
+	justify-content: center;
+	align-items: center;
 }
 
 .light {
-  border: solid black 1px;
-  width: 5px;
-  height: 5px;
-  border-radius: 50%;
-  margin-right: 7px;
-  background: red;
+	border: solid black 1px;
+	width: 5px;
+	height: 5px;
+	border-radius: 50%;
+	margin-right: 7px;
+	background: red;
 }
 
 .line {
-  width: 18px;
-  height: 2px;
-  background-color: black;
-  margin-top: 8px;
-  display: block;
+	width: 18px;
+	height: 2px;
+	background-color: black;
+	margin-top: 8px;
+	display: block;
+}
+
+.button {
+	font-family: "pokefont";
+	font-size: 20px;
+	color: #356ABC;
+	background-color: #ffcd00;
+	border-radius: 40px;
+	border: 3px solid #356ABC;
+	display:inline-block;
 }
 
 .submitbutton {
@@ -57,92 +60,88 @@ button{
 }
 
 .searchbutton {
-font-family: "pokefont";
-font-size: 15px;
-color: #356ABC;
-background-color: #ffcd00;
-border-radius: 40px;
-border: 3px solid #356ABC;
+	font-family: "pokefont";
+	font-size: 15px;
+	color: #356ABC;
+	background-color: #ffcd00;
+	border-radius: 40px;
+	border: 3px solid #356ABC;
 }
 
-h1{
-font-family:"pokefont";
+h1 {
+	font-family:"pokefont";
 }
 
 .boxed {
-  border: 5px solid #356ABC;
-  border-radius: 25px;
-  border-style: double;
-  background: #Eaeeef;
-  padding: 20px;
-  height: auto;
-  width: 70%;
-  margin: auto;
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
-  font-family:"pokefont";
+	border: 5px solid #356ABC;
+	border-radius: 25px;
+	border-style: double;
+	background: #Eaeeef;
+	padding: 20px;
+	height: auto;
+	margin: auto;
+	display: inline-block;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: left;
+	font-family:"pokefont";
+	box-sizing: border-box;
 }
-.boxedletter {
-  border: 5px solid #3a7bd4;
-  border-radius: 25px;
-  border-style: double;
-  background: #Eaeeef;
-  padding: 20px;
-  height: auto;
-  width: 70%;
-  margin: auto;
-  display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: left;
-  font-family:"pokefont";
+
+#main-body-container {
+	position: relative;
+	height: 550px;
 }
-ul{
+
+#screen-container {
+	position: absolute;
+	height: 100%;
+	right: 0;
+	width: 60%;
+}
+
+#contactSearchResults {
+	position: absolute;
+	height: 100%;
+	left: 0;
+	width: 40%;
+}
+ul {
 	list-style-type:none;
 	padding: 0;
 	margin: 0;
 	margin-left: 1em;
 }
 
-li.selected{
-background-image: url(../images/openpokeball.png);
-padding:10px;
-font-family: "pokefont";
-font-size: 20px;
-background-repeat: no-repeat;
-display: block;
-background-position: 0 .1em;
-padding-left: 1em;
+li.selected {
+	background-image: url(images/openpokeball.png);
+	padding:10px;
+	font-family: "pokefont";
+	font-size: 20px;
+	background-repeat: no-repeat;
+	display: block;
+	background-position: 0 .1em;
+	padding-left: 1em;
 }
 
-li.unselected{
-background-image: url(../images/pokeball.png);
-padding:10px;
-font-family: "pokefont";
-font-size: 20px;
-background-repeat: no-repeat;
-background-position: 0 1.1em;
-display: block;
-padding-left: 1em;
+li.unselected {
+	background-image: url(images/pokeball.png);
+	padding:10px;
+	font-family: "pokefont";
+	font-size: 20px;
+	background-repeat: no-repeat;
+	background-position: 0 1.1em;
+	display: block;
+	padding-left: 1em;
 }
 
-div.boxed
-{
-    display: block;
-    text-align: center;
-    font-family:"pokefont";
-}
-div.boxedletter
-{
+div.boxed {
     display: block;
     text-align: center;
     font-family:"pokefont";
 }
 
-div.resultsborder
-{
+div.resultsborder {
 	border: 5px solid black;
 	background: white;
 	padding: 20px;
@@ -151,10 +150,10 @@ div.resultsborder
 	margin: auto;
 	display:inline-block;
 	border-radius: 0 0 0 17%;
+	position: relative;
 }
 
-div.results
-{
+form.results {
 	border: 5px solid black;
 	border-radius: 5px;
 	background: #98cb98;
@@ -171,10 +170,77 @@ div.results
 	color: black;
 }
 
+.results input {
+	font: inherit;
+	font-size: 25px;
+	border: none;
+	outline: none;
+	background-color: inherit;
+	width: 100%;
+}
+
+.results input#phoneNumber {
+	width: 70%;
+}
+
+.emptymode .results {
+	color: darkslategrey;
+	background-color: #7da77d;
+}
+
+.emptymode .bottom-button-container,
+.emptymode #editbutton,
+.emptymode #deletebutton {
+	display: none;
+}
+
+.viewingmode .bottom-button-container {
+	display: none;
+}
+
+.createmode #editbutton, 
+.createmode #deletebutton {
+	display: none;
+}
+
+.editmode #addbutton, 
+.editmode #deletebutton {
+	visibility: hidden;
+}
+
+
+.side-button-container {
+	position: absolute;
+	right: 0;
+	top: 30px;
+	width: 45px;
+}
+.side-button-container > .button {
+	margin: 0 0 5px 0;
+}
+
+.bottom-button-container {
+	position: absolute;
+	bottom: 22px;
+	right: 74px;
+}
+
+#cancelbutton {
+	background-color: rgb(252, 82, 52);
+	color: #054097;
+	margin-left: 5px;
+}
 
 body {
-background-image: url('../images/pokewallpaper.png');
-background-repeat: no-repeat;
-background-size: cover;
-background-color: #cccccc;
+	background-image: url("https://wallpapercave.com/wp/wp2432933.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-color: #cccccc;
+}
+
+.page-wrap {
+	position: relative;
+	width: 75%;
+	min-width: 766px;
+	margin: auto;
 }
